--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8888
 spring.application.name=config-service
-spring.cloud.config.server.git.uri=
+spring.cloud.discovery.enabled=true
+spring.cloud.config.server.git.uri=https://github.com/hssounz/stock-management-config-repo.git
