--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8081
+spring.application.name=customer-service
+spring.config.import=optional:configserver:http://localhost:8888
 
+
+#spring.config.import=optional:configserver:http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
