--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=9999
+spring.application.name=gateway-service
+#spring.cloud.config.uri=http://localhost:8888
 
+#spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
